--- a/index.html
+++ b/index.html
@@ -220,6 +220,15 @@
                     </p>
                   </div>
                 </div>
+                <style>
+                  @font-face {
+                    font-family: para;
+                    src: url(/gen.otf);
+                  }
+                  p{
+                    font-family: para;
+                  }
+                </style>
                 <div style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
                     <marquee behavior="scroll" direction="right">
                       <div>
@@ -283,6 +292,11 @@
               <p class="fs-17">10/10</p>
             </div>
           </div>
+          <style>
+            html, body {
+              overflow-x: hidden;
+            }
+          </style>
           <div class="col-xl-4 col-md-6" data-aos="fade-left">
             <div class="token-details-box">
               <h5 class="title" style="font-family:head; ">Max Tx/ Wallet</h5>
