--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="col-12">
                     <div class="header__body">
                         <div class="header__logo">
-                            <a href="index.htm" style="font-family:head; ">
+                            <a href="index.htm" style="font-family:head; font-size: 30px;">
                   <img
                     id="site-logo"
                     src="/vin.png"
