--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Add these scripts in your HTML file -->
 </head>
 
-<body class="home-nft header-fixed" data-magic-cursor="show">
+<body class="home-nft header-fixed" data-magic-cursor="show" style="background-image: linear-gradient(to left bottom, #863f00, #934604, #a04d09, #ad550e, #ba5c14, #c26219, #cb671d, #d36d22, #d87227, #de782d, #e37d32, #e98337);">
     <!-- Preloading -->
     <div class="preloader">
         <div class="loader">
@@ -857,7 +857,7 @@
                     <div class="col-md-12">
                         <div class="join-now__main">
                             <h3>Join The $DBARV COMMUNITY</h3>
-                            <p>
+                            <p style="color: #fff;">
                               Remember, DBARV is more than just a token; it’s a mindset. Embrace the journey, savor each moment, and don’t rush—because sometimes the best outcomes come to those who take their time. 🌟     
                         </p>
                             <div class="join-now__button">
