--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="robots" content="index,follow" />
     
-    <title>Vincent $DBARV</title>
+    <title>Rush Vincent - $DBARV</title>
 
     <!-- Styles -->
     <link rel="stylesheet" href="app/bootstrap/css/bootstrap.min.css" />
@@ -29,7 +29,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet" />
-    <link rel="shortcut icon" href="/vin.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="/v3.png" type="image/x-icon">
     <!-- custom css source -->
     <script src="npm/sweetalert2%4010.js"></script>
 
@@ -89,21 +89,21 @@
                             <nav id="main-nav" class="main-nav">
                                 <ul id="menu-primary-menu" class="menu">
                                     <li class="menu-item current-menu-item">
-                                        <a href="index.htm">Home</a>
+                                        <a href="index.htm" style="font-family:head;">Home</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="#about">About</a>
+                                        <a href="#about" style="font-family:head;">About</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="#tokenomics">Tokenomics</a>
+                                        <a href="#tokenomics" style="font-family:head;">Tokenomics</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="#roadmap">RoadMap</a>
+                                        <a href="#roadmap" style="font-family:head;">RoadMap</a>
                                     </li>
                                    
 
                                     <li class="menu-item">
-                                        <a href="">Whitepaper</a>
+                                        <a href="" style="font-family:head;">Whitepaper</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -177,7 +177,7 @@
           <div class="col-xl-6 col-md-12">
             <div class="about__video">
               <img
-                src="./vin.png"
+                src="./v3.png"
                 alt="kndc"
                 width="500px"
               />
@@ -185,7 +185,7 @@
           </div>
           <div class="col-xl-6 col-md-12">
             <div class="about__content" style="margin-top: -30px">
-              <h6 class="sub-title">About us</h6>
+              <h6 class="sub-title">About </h6>
               <h3 style="font-family: head"
               data-aos="fade-right">
                 Who Is Vincent
