--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Add these scripts in your HTML file -->
 </head>
 
-<body class="home-nft header-fixed" data-magic-cursor="show" style="background-image: linear-gradient(to left bottom, #863f00, #934604, #a04d09, #ad550e, #ba5c14, #c26219, #cb671d, #d36d22, #d87227, #de782d, #e37d32, #e98337);">
+<body class="home-nft header-fixed" data-magic-cursor="show" >
     <!-- Preloading -->
     <div class="preloader">
         <div class="loader">
@@ -73,10 +73,10 @@
                 <div class="col-12">
                     <div class="header__body">
                         <div class="header__logo">
-                            <a href="index.htm" style="font-family:head; font-size: 30px;">
+                            <a href="index.html" style="font-family:head; font-size: 30px;">
                   <img
                     id="site-logo"
-                    src="/vin.png"
+                    src="/v2.png"
                     alt="Monteno"
                    style="width: 40px;"
                    
