--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Add these scripts in your HTML file -->
 </head>
 
-<body class="home-nft header-fixed" data-magic-cursor="show" >
+<body class="home-nft header-fixed" data-magic-cursor="show" style="background-image: linear-gradient(to left bottom, #863f00, #934604, #a04d09, #ad550e, #ba5c14, #c26219, #cb671d, #d36d22, #d87227, #de782d, #e37d32, #e98337);">
     <!-- Preloading -->
     <div class="preloader">
         <div class="loader">
