--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           <div class="col-xl-4 col-md-6" data-aos="fade-left">
             <div class="token-details-box">
               <h5 class="title" style="font-family:head; ">Buy and Sell</h5>
-              <p class="fs-17">10/10</p>
+              <p class="fs-17">3/5</p>
             </div>
           </div>
           <style>
@@ -305,21 +305,21 @@
           </div>
           <div class="col-xl-4 col-md-6" data-aos="fade-right">
             <div class="token-details-box">
-              <h5 class="title" style="font-family:head; ">ETH</h5>
-              <p class="fs-17">NETWORK</p>
+              <h5 class="title" style="font-family:head; ">NETWORK</h5>
+              <p class="fs-17">ETH</p>
             </div>
           </div>
           <div class="col-xl-4 col-md-6" data-aos="fade-right">
             <div class="token-details-box">
-              <h5 class="title" style="font-family:head; ">REVOKED</h5>
-              <p class="fs-17">OWNERSHIP</p>
+              <h5 class="title" style="font-family:head; ">OWNERSHIP</h5>
+              <p class="fs-17">REVOKED</p>
             </div>
           </div>
           
           <div class="col-xl-4 col-md-6" data-aos="fade-left">
             <div class="token-details-box">
-              <h5 class="title" style="font-family:head; ">TBA</h5>
-              <p class="fs-17">CONTRACT ADDRESS $DBARV</p>
+              <h5 class="title" style="font-family:head; ">CONTRACT ADDRESS $DBARV</h5>
+              <p class="fs-17">TBA</p>
             </div>
           </div>
         </div>
@@ -856,7 +856,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="join-now__main">
-                            <h3>Join The $DBARV COMMUNITY</h3>
+                            <h3 style="font-family: head;">Join The $DBARV COMMUNITY</h3>
                             <p style="color: #fff;">
                               Remember, DBARV is more than just a token; it’s a mindset. Embrace the journey, savor each moment, and don’t rush—because sometimes the best outcomes come to those who take their time. 🌟     
                         </p>
