--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <div class="col-xl-6 col-md-12">
             <div class="about__video">
               <img
-                src="./v3.png"
+                src="./about.jpeg"
                 alt="kndc"
                 width="500px"
               />
@@ -282,13 +282,13 @@
         <div class="row">
           <div class="col-xl-4 col-md-6" data-aos="fade-right">
             <div class="token-details-box active">
-              <h5 class="title" style="font-family:head; ">1BILLION $DBARV</h5>
-              <p class="fs-17">Total Supply</p>
+              <h5 class="title" style="font-family:head; ">Total Supply</h5>
+              <p class="fs-17">1BILLION $DBARV</p>
             </div>
           </div>
           <div class="col-xl-4 col-md-6" data-aos="fade-left">
             <div class="token-details-box">
-              <h5 class="title" style="font-family:head; ">Buy and Sell</h5>
+              <h5 class="title" style="font-family:head; ">Buy/Sell</h5>
               <p class="fs-17">3/5</p>
             </div>
           </div>
