--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                           Don’t Be a Rush Vincent (DBARV) is an Ethereum-based ERC-20 token designed to embody the spirit of thoughtful decision-making and deliberate action.   
                     </p>
                         <div class="button">
-                            &nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0)" class="btn-action style-2"><span>JOIN COMMUNITY</span></a
+                            &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://t.me/DBARV" class="btn-action style-2"><span>JOIN COMMUNITY</span></a
                 >
               </div>
 
@@ -299,8 +299,8 @@
           </style>
           <div class="col-xl-4 col-md-6" data-aos="fade-left">
             <div class="token-details-box">
-              <h5 class="title" style="font-family:head; ">Max Tx/ Wallet</h5>
-              <p class="fs-17">5%</p>
+              <h5 class="title" style="font-family:head; ">DECIMAL</h5>
+              <p class="fs-17">9</p>
             </div>
           </div>
           <div class="col-xl-4 col-md-6" data-aos="fade-right">
@@ -570,186 +570,71 @@
         <!-- Section Team -->
         <section class="section-team team-8" id="nft" style="background: transparent">
             <div class="container" data-aos="zoom-in">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="flat-tabs">
-                            <!-- <ul class="menu-tab">
-                <li class="active">
-                  <div class="image">
-                    <img src="assets/images/background/number2.png" alt="CSC" />
-                  </div>
-                </li>
-                <li>
-                  <div class="image">
-                    <img src="assets/images/background/number1.png" alt="CSC" />
-                  </div>
-                </li>
-                <li>
-                  <div class="image">
-                    <img src="assets/images/background/number4.png" alt="CSC" />
-                  </div>
-                </li>
-                <li>
-                  <div class="image">
-                    <img src="assets/images/background/number3.png" alt="CSC" />
-                  </div>
-                </li>
-                <li>
-                  <div class="image">
-                    <img src="assets/images/background/number5.png" alt="CSC" />
-                  </div>
-                </li>
-              </ul> -->
-                            <div class="content-tab">
-                                <div class="content-inner">
-                                    <div class="content">
-                                         <div class="block-text">
-                                          <div class="image">
-                                            <img src="/v3.png" alt="CSC" />
-                                        </div> 
-                                        </div> 
-                                        <!-- <div class="info">
-                      <span class="icon-union-01"></span>
-                      <span class="icon-union-02"></span>
-                      <span class="icon-union-03"></span>
-                      <span class="icon-union-04"></span>
-                      <h4  class="name">Kid Cosmic</h4 >
-                      <p class="text">
-                        The fearless leader of the team, Kid Cosmic's boundless
-                        imagination and unwavering determination drive the
-                        group's cosmic escapades. With his newfound powers and
-                        indomitable spirit, Kid Cosmic inspires his friends and
-                        viewers alike to dream big and reach for the stars.
-                      </p>
-                    </div> -->
-                                    </div>
-                                   <div class="image">
-                                        <img src="/v2.png" alt="CSC" />
-                                    </div> 
-                                </div>
-                                <!-- <div class="content-inner">
-                  <div class="image">
-                    <img src="assets/images/background/number1.png" alt="CSC" />
-                  </div>
-                  <div class="content">
-                    <div class="block-text">
-                      <h3 class="heading">Nft Character Set</h3>
-                      <p>
-                        Each character of the Cosmic kid cartoon will be a
-                        unique NFT.
-                      </p>
-                    </div>
-                    <div class="info">
-                      <span class="icon-union-01"></span>
-                      <span class="icon-union-02"></span>
-                      <span class="icon-union-03"></span>
-                      <span class="icon-union-04"></span>
-                      <h4  class="name">Jo</h4 >
-                      <p class="text">
-                        Brave and tenacious, Jo is a force to be reckoned with
-                        on the cosmic battlefield. With her fierce determination
-                        and sharp intellect, Jo fearlessly confronts challenges
-                        head-on, proving that strength comes in many forms and
-                        that perseverance is key to achieving success.
-                      </p>
-                    </div>
-                  </div>
-                </div> -->
-                                <!-- <div class="content-inner">
-                  <div class="image">
-                    <img src="assets/images/background/number4.png" alt="CSC" />
-                  </div>
-                  <div class="content">
-                    <div class="block-text">
-                      <h3 class="heading">Nft Character Set</h3>
-                      <p>
-                        Each character of the Cosmic kid cartoon will be a
-                        unique NFT.
-                      </p>
-                    </div>
-                    <div class="info">
-                      <span class="icon-union-01"></span>
-                      <span class="icon-union-02"></span>
-                      <span class="icon-union-03"></span>
-                      <span class="icon-union-04"></span>
-                      <h4  class="name">Rosa</h4 >
-                      <p class="text">
-                        The heart of the team, Rosa brings warmth and empathy to
-                        their cosmic journey. With her nurturing nature and
-                        caring demeanor, Rosa fosters a sense of unity and
-                        camaraderie among the group, reminding them that
-                        friendship is the most powerful force in the universe.
-                      </p>
-                    </div>
-                  </div>
-                </div> -->
-                                <!-- <div class="content-inner">
-                  <div class="image">
-                    <img src="assets/images/background/number3.png" alt="CSC" />
-                  </div>
-                  <div class="content">
-                    <div class="block-text">
-                      <h3 class="heading">Nft Character Set</h3>
-                      <p>
-                        Each character of the Cosmic kid cartoon will be a
-                        unique NFT.
-                      </p>
-                    </div>
-                    <div class="info">
-                      <span class="icon-union-01"></span>
-                      <span class="icon-union-02"></span>
-                      <span class="icon-union-03"></span>
-                      <span class="icon-union-04"></span>
-                      <h4  class="name">Stuck Chuck</h4 >
-                      <p class="text">
-                        A quirky and endearing character, Stuck Chuck adds an
-                        element of surprise and unpredictability to Kid Cosmic's
-                        team. Despite his tendency to find himself in sticky
-                        situations, Stuck Chuck's unwavering loyalty and unique
-                        perspective make him an invaluable member of the group.
-                        With his unconventional approach to problem-solving and
-                        willingness to take risks, Stuck Chuck reminds us that
-                        sometimes the greatest adventures come from embracing
-                        the unexpected.
-                      </p>
-                    </div>
-                  </div>
-                </div> -->
-                                <!-- <div class="content-inner">
-                  <div class="image">
-                    <img src="assets/images/background/number5.png" alt="CSC" />
-                  </div>
-                  <div class="content">
-                    <div class="block-text">
-                      <h3 class="heading">Nft Character Set</h3>
-                      <p>
-                        Each character of the Cosmic kid cartoon will be a
-                        unique NFT.
-                      </p>
-                    </div>
-                    <div class="info">
-                      <span class="icon-union-01"></span>
-                      <span class="icon-union-02"></span>
-                      <span class="icon-union-03"></span>
-                      <span class="icon-union-04"></span>
-                      <h4  class="name">Papa G</h4 >
-                      <p class="text">
-                        The wise mentor and guiding light for Kid Cosmic and his
-                        friends, Papa G shares his vast knowledge and experience
-                        to help them navigate the cosmic mysteries they
-                        encounter. With his sage advice and unwavering support,
-                        Papa G empowers the team to believe in themselves and
-                        embrace their destiny as cosmic heroes.
-                      </p>
-                    </div>
-                  </div>
-                </div> -->
-                            </div>
-                        </div>
-                    </div>
+              <h1 style="font-family:head; ">MEMES</h1>
+              <div class="slider-container">
+                <div class="slider">
+                  <div class="card">Card 1</div>
+                  <div class="card">Card 2</div>
+                  <div class="card">Card 3</div>
+                  <!-- Add more cards as needed -->
                 </div>
+              </div>
+       <script>
+        const slider = document.querySelector('.slider');
+let isDown = false;
+let startX;
+let scrollLeft;
+
+slider.addEventListener('mousedown', (e) => {
+  isDown = true;
+  slider.classList.add('active');
+  startX = e.pageX - slider.offsetLeft;
+  scrollLeft = slider.scrollLeft;
+});
+
+slider.addEventListener('mouseleave', () => {
+  isDown = false;
+  slider.classList.remove('active');
+});
+
+slider.addEventListener('mouseup', () => {
+  isDown = false;
+  slider.classList.remove('active');
+});
+
+slider.addEventListener('mousemove', (e) => {
+  if (!isDown) return;
+  e.preventDefault();
+  const x = e.pageX - slider.offsetLeft;
+  const walk = (x - startX) * 2; // Change the sensitivity of the slider movement
+  slider.scrollLeft = scrollLeft - walk;
+});
+
+// Touch events
+slider.addEventListener('touchstart', (e) => {
+  isDown = true;
+  slider.classList.add('active');
+  startX = e.touches[0].pageX - slider.offsetLeft;
+  scrollLeft = slider.scrollLeft;
+});
+
+slider.addEventListener('touchend', () => {
+  isDown = false;
+  slider.classList.remove('active');
+});
+
+slider.addEventListener('touchmove', (e) => {
+  if (!isDown) return;
+  e.preventDefault();
+  const x = e.touches[0].pageX - slider.offsetLeft;
+  const walk = (x - startX) * 2; // Change the sensitivity of the slider movement
+  slider.scrollLeft = scrollLeft - walk;
+});
+
+       </script>
             </div>
-        </section>
+       
+          </section>
         <section>
             <div class="containerz" data-aos="fade-up">
                 <h1 style="font-family:head; ">WHY CHOOSE $DBARV</h1>
@@ -861,11 +746,11 @@
                               Remember, DBARV is more than just a token; it’s a mindset. Embrace the journey, savor each moment, and don’t rush—because sometimes the best outcomes come to those who take their time. 🌟     
                         </p>
                             <div class="join-now__button">
-                                <a href="https://t.me/" class="btn-action style-2"><span class="bi bi-telegram"></span>
+                                <a href="https://t.me/DBARV" class="btn-action style-2"><span class="bi bi-telegram"></span>
                   <span>TELEGRAM</span>
                 </a>
 
-                                <a href="https://x.com/" class="btn-action style-2"><span class="bi bi-twitter-x"></span>
+                                <a href="https://x.com/whosrushvincent" class="btn-action style-2"><span class="bi bi-twitter-x"></span>
                   <span>TWITTER</span>
                 </a>
                             </div>
@@ -2352,5 +2237,6 @@
     <script>
       AOS.init();
     </script>
+           <script src="script.js"></script>
   </body>
 </html>
