--- a/index.html
+++ b/index.html
@@ -570,68 +570,8 @@
         <!-- Section Team -->
         <section class="section-team team-8" id="nft" style="background: transparent">
             <div class="container" data-aos="zoom-in">
-              <h1 style="font-family:head; ">MEMES</h1>
-              <div class="slider-container">
-                <div class="slider">
-                  <div class="card">Card 1</div>
-                  <div class="card">Card 2</div>
-                  <div class="card">Card 3</div>
-                  <!-- Add more cards as needed -->
-                </div>
-              </div>
-       <script>
-        const slider = document.querySelector('.slider');
-let isDown = false;
-let startX;
-let scrollLeft;
-
-slider.addEventListener('mousedown', (e) => {
-  isDown = true;
-  slider.classList.add('active');
-  startX = e.pageX - slider.offsetLeft;
-  scrollLeft = slider.scrollLeft;
-});
-
-slider.addEventListener('mouseleave', () => {
-  isDown = false;
-  slider.classList.remove('active');
-});
-
-slider.addEventListener('mouseup', () => {
-  isDown = false;
-  slider.classList.remove('active');
-});
-
-slider.addEventListener('mousemove', (e) => {
-  if (!isDown) return;
-  e.preventDefault();
-  const x = e.pageX - slider.offsetLeft;
-  const walk = (x - startX) * 2; // Change the sensitivity of the slider movement
-  slider.scrollLeft = scrollLeft - walk;
-});
-
-// Touch events
-slider.addEventListener('touchstart', (e) => {
-  isDown = true;
-  slider.classList.add('active');
-  startX = e.touches[0].pageX - slider.offsetLeft;
-  scrollLeft = slider.scrollLeft;
-});
-
-slider.addEventListener('touchend', () => {
-  isDown = false;
-  slider.classList.remove('active');
-});
-
-slider.addEventListener('touchmove', (e) => {
-  if (!isDown) return;
-  e.preventDefault();
-  const x = e.touches[0].pageX - slider.offsetLeft;
-  const walk = (x - startX) * 2; // Change the sensitivity of the slider movement
-  slider.scrollLeft = scrollLeft - walk;
-});
-
-       </script>
+              <h1 style="font-family:head; text-align: center;">MEMES</h1>
+              
             </div>
        
           </section>
