--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           <div class="col-xl-4 col-md-6" data-aos="fade-left">
             <div class="token-details-box">
               <h5 class="title" style="font-family:head; ">Buy/Sell</h5>
-              <p class="fs-17">3/5</p>
+              <p class="fs-17">3/5%</p>
             </div>
           </div>
           <style>
