--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="block-text center">
-              <h3 class="heading" style="font-family: head">
+              <h3 class="heading" style="font-family: head; text-align: center;">
                 $DBARV Tokenomics
               </h3>
               <p class="fs-17 mt-16"></p>
@@ -282,13 +282,13 @@
         <div class="row">
           <div class="col-xl-4 col-md-6" data-aos="fade-right">
             <div class="token-details-box active">
-              <h5 class="title" style="font-family:head; ">Total Supply</h5>
+              <h3 class="heading" style="font-family:head; ">Total Supply</h3>
               <p class="fs-17">1BILLION $DBARV</p>
             </div>
           </div>
           <div class="col-xl-4 col-md-6" data-aos="fade-left">
             <div class="token-details-box">
-              <h5 class="title" style="font-family:head; ">Buy/Sell</h5>
+              <h3 class="heading" style="font-family:head; ">Buy/Sell</h3>
               <p class="fs-17">3/5%</p>
             </div>
           </div>
@@ -299,26 +299,26 @@
           </style>
           <div class="col-xl-4 col-md-6" data-aos="fade-left">
             <div class="token-details-box">
-              <h5 class="title" style="font-family:head; ">DECIMAL</h5>
+              <h3 class="heading" style="font-family:head; ">DECIMAL</h3>
               <p class="fs-17">9</p>
             </div>
           </div>
           <div class="col-xl-4 col-md-6" data-aos="fade-right">
             <div class="token-details-box">
-              <h5 class="title" style="font-family:head; ">NETWORK</h5>
+              <h3 class="heading" style="font-family:head; ">NETWORK</h3>
               <p class="fs-17">ETH</p>
             </div>
           </div>
           <div class="col-xl-4 col-md-6" data-aos="fade-right">
             <div class="token-details-box">
-              <h5 class="title" style="font-family:head; ">OWNERSHIP</h5>
+              <h3 class="heading" style="font-family:head; ">OWNERSHIP</h3>
               <p class="fs-17">REVOKED</p>
             </div>
           </div>
           
           <div class="col-xl-4 col-md-6" data-aos="fade-left">
             <div class="token-details-box">
-              <h5 class="title" style="font-family:head; ">CONTRACT ADDRESS $DBARV</h5>
+              <h3 class="heading" style="font-family:head; ">CONTRACT ADDRESS $DBARV</h3>
               <p class="fs-17">TBA</p>
             </div>
           </div>
@@ -332,8 +332,8 @@
     <section class="section-story section-padding" id="roadmap">
       <div class="container" data-aos="zoom-in">
         <div class="block-text center">
-          <h3 class="heading" style="font-family: head">
-            Road map 
+          <h3 class="heading" style="font-family: head; text-align: center;">
+            Roadmap 
           </h3>
           <p class="mt-16 fs-17">
            
