--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
         <!-- Section Team -->
         <section class="section-team team-8" id="nft" style="background: transparent">
             <div class="container" data-aos="zoom-in">
-              <h1 style="font-family:head; text-align: center;">MEMES</h1>
+              <h3 class="heading" style="font-family:head; text-align: center;">MEMES</h3>
               <section class="slider">
                 <div class="container-s">
                 
