--- a/index.html
+++ b/index.html
@@ -647,17 +647,20 @@
           </section>
         <section>
             <div class="containerz" data-aos="fade-up">
-                <h1 style="font-family:head; ">WHY CHOOSE $DBARV</h1>
+                <h1 style="font-family:head; ">Why hodl $DBARV?</h1>
                 <div class="columu" style="display: flex; justify-content: center; flex-direction: column; text-align: center; align-items: center;">
                     <div class="heading-textz">
-                        <h3 style="font-family:head; font-size: 20px;"> Join the DBARV community to share insights, discuss mindfulness, and promote deliberate decision-making.</h3>
-                        <!-- <p>
-                            $DBARV offers a vibrant community where everyone's voice is valued, fostering a sense of belonging and engagement among members.
-                        </p> -->
+                        <h3 style="font-family:head; font-size: 20px;"> HODL $DBARV to get filthy rich, it’s simple right?</h3>
+                        <p>
+                          But on top of that the DBARV community are a pack of ambitious individuals, so join us to network with like minded high achieving winners.
+
+                          Individuals with a purpose that don’t just sit around all day chasing girls, we chase dreams.
+                          </p>
                     </div>
 
                     <div class="heading-textz">
-                        <h3 style="font-family:head; font-size: 20px;">DBARV holders believe in taking measured steps toward success and personal growth.</h3>
+                        <!-- <h3 style="font-family:head; font-size: 20px;">DBARV holders believe in taking measured steps toward success and personal growth.</h3>
+                        -->
                         <!-- <p>
                             With its playful and lighthearted approach, $DBARV taps into the nostalgia of the beloved Cosmic kid Cartoon, creating a fun and enjoyable experience for fans of the show.
                         </p> -->
@@ -753,8 +756,11 @@
                         <div class="join-now__main">
                             <h3 style="font-family: head;">Join The $DBARV COMMUNITY</h3>
                             <p style="color: #fff;">
-                              Remember, DBARV is more than just a token; it’s a mindset. Embrace the journey, savor each moment, and don’t rush—because sometimes the best outcomes come to those who take their time. 🌟     
-                        </p>
+                              Join the $DBARV movement to unlock boundless wealth! 
+
+                              🚀Embrace a community of ambitious winners uniting to propel you towards success. Connect with purpose-driven go-getters who fuel their days with ambition, not distractions. 
+                            </p>
+                            <h3 style="font-family: head; font-size: 20px;">Chase dreams, not trivialities. 💪 #DBARV #HODLStrong</h3>
                             <div class="join-now__button">
                                 <a href="https://t.me/dbarv" class="btn-action style-2"><span class="bi bi-telegram"></span>
                   <span>TELEGRAM</span>
