--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="banner-top__content">
                         <h2 class="title" style="font-family: head;">Welcome To <br>$DBARV</h2>
                         <p class="desc">
-                          Don’t Be a Rush Vincent (DBARV) is an Ethereum-based ERC-20 token designed to embody the spirit of thoughtful decision-making and deliberate action.   
+                          Don’t Be a Rush. A Rush Vincent is a guy that ultimately throws their life away for short time enjoyment.
                     </p>
                         <div class="button">
                             &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://t.me/dbarv" class="btn-action style-2"><span>JOIN COMMUNITY</span></a
@@ -283,13 +283,13 @@
           <div class="col-xl-4 col-md-6" data-aos="fade-right">
             <div class="token-details-box active">
               <h3 class="heading" style="font-family:head; ">Total Supply</h3>
-              <p class="fs-17">1BILLION $DBARV</p>
+              <p class="fs-17" style="font-size: 30px;">1 BILLION $DBARV</p>
             </div>
           </div>
           <div class="col-xl-4 col-md-6" data-aos="fade-left">
             <div class="token-details-box">
               <h3 class="heading" style="font-family:head; ">Buy/Sell</h3>
-              <p class="fs-17">3/5%</p>
+              <p class="fs-17" style="font-size: 30px;">3/5%</p>
             </div>
           </div>
           <style>
@@ -300,26 +300,26 @@
           <div class="col-xl-4 col-md-6" data-aos="fade-left">
             <div class="token-details-box">
               <h3 class="heading" style="font-family:head; ">DECIMAL</h3>
-              <p class="fs-17">9</p>
+              <p class="fs-17" style="font-size: 30px;">9</p>
             </div>
           </div>
           <div class="col-xl-4 col-md-6" data-aos="fade-right">
             <div class="token-details-box">
               <h3 class="heading" style="font-family:head; ">NETWORK</h3>
-              <p class="fs-17">ETH</p>
+              <p class="fs-17" style="font-size: 30px;">ETH</p>
             </div>
           </div>
           <div class="col-xl-4 col-md-6" data-aos="fade-right">
             <div class="token-details-box">
               <h3 class="heading" style="font-family:head; ">OWNERSHIP</h3>
-              <p class="fs-17">REVOKED</p>
+              <p class="fs-17" style="font-size: 30px;">REVOKED</p>
             </div>
           </div>
           
           <div class="col-xl-4 col-md-6" data-aos="fade-left">
             <div class="token-details-box">
               <h3 class="heading" style="font-family:head; ">CONTRACT ADDRESS $DBARV</h3>
-              <p class="fs-17">TBA</p>
+              <p class="fs-17" style="font-size: 30px;">TBA</p>
             </div>
           </div>
         </div>
